<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <item
        android:id="@+id/menuPerfil"
        android:enabled="true"
        android:icon="@drawable/ic_person_brown_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_perfil"
        android:visible="true"
        app:showAsAction="always|withText"></item>

    <item
        android:id="@+id/menuRanking"
        android:enabled="true"
        android:icon="@drawable/hikking"
        android:orderInCategory="100"
        android:title="@string/menu_ranking"
        android:visible="true"
        app:showAsAction="never"></item>
    <item android:id="@+id/menuLinguagem"
        android:title="@string/menu_ling"
        app:showAsAction="never"></item>


    <item
        android:id="@+id/menuSair"
        android:orderInCategory="100"
        android:title="@string/menu_sair"
        app:showAsAction="never"></item>


</menu>